discussion/kv_engine/164730/164730_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

Verify GlobalTask::state in ExecutorPool methods

Check GlobalTask::state in the various ExecutorPool methods which
affect state (schedule, cancel etc). This helps to avoid incorrect
usage of the ExecutorPool (for example attempting to schedule a task
twice).

(This was added as part of investigating MB-47451 to confirm that the
ExecutorPool API was being used correctly. It didn't highlight any
current issues, but seems worthwhile to keep to help avoid any future
issues.)

Change-Id: I1ba1b4552bcb1d3849e29eec408bb41c8acbb5e2

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2021-11-01 15:48:26.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-11-01 16:03:34.000000000
Message: 
Patch Set 3: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35243/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/executor/folly_executorpool.cc:237:17:
error: use of undeclared identifier "tState"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35243/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/41504/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/executor/folly_executorpool.cc(237): error C2065: "tState": undeclared identifier ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/41504/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13761/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/folly_executorpool.cc:237:17: error: use of undeclared identifier "tState" [clang-diagnostic-error]
            if (tState != TASK_DEAD) {
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/folly_executorpool.cc:244:35: error: use of undeclared identifier "tState" [clang-diagnostic-error]
                        to_string(tState)));
                                  ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13761/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/folly_executorpool.cc:237:17:
error: use of undeclared identifier "tState" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13761/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/14538/ : FAILURE

Compile error at [2021-11-01T15:50:52.976Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master@2/kv_engine/executor/folly_executorpool.cc:237:17:
error: use of undeclared identifier "tState"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/14538/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3395/ : FAILURE

Compile error at [2021-11-01T15:50:44.398Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/executor/folly_executorpool.cc:237:17:
error: use of undeclared identifier "tState"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3395/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15658/ : FAILURE

Compile error at [2021-11-01T16:00:30.360Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/executor/folly_executorpool.cc:237:17:
error: ?tState? was not declared in this scope; did you mean ?State??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15658/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/16341/ : FAILURE

Compile error at [2021-11-01T15:57:36.020Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/executor/folly_executorpool.cc:237:17:
error: use of undeclared identifier "tState"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/16341/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/23712/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3467/ : FAILURE

Compile error at [2021-11-01T15:59:21.364Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master@2/kv_engine/executor/folly_executorpool.cc:237:17:
error: ?tState? was not declared in this scope; did you mean ?State??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3467/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15375/ : FAILURE

Compile error at [2021-11-01T15:57:57.445Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/executor/folly_executorpool.cc:237:17:
error: ?tState? was not declared in this scope; did you mean ?State??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15375/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/12561/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
